--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -32,7 +32,7 @@ Login
 
 <script>
   $('#login').submit(function(){
-  	var url = 'http://172.20.10.8:3000/verificador_de_password'
+  	var url = 'https://btmconsulting-api.herokuapp.com/verificador_de_password'
 
   	var user = {
             email: $("#id-email").val(),
