--- a/www/views/meeting.hbs
+++ b/www/views/meeting.hbs
@@ -2,7 +2,7 @@
   <!--  <a id="sa-success" class="mdl-button mdl-js-button"><i class="material-icons">close</i></a> -->
   <center> 
   <span><h3>Meeting</h3></span>
-  <span class="calendar-hour"><h6>{{prettifyDate fecha_cita}}</h6></span>
+  <span class="calendar-hour"><h6>{{parsedPretyDate fecha_cita}}</h6></span>
   </center>
 </div>
 <div class="clr"></div>
