--- a/platforms/browser/www/views/menu.hbs
+++ b/platforms/browser/www/views/menu.hbs
@@ -37,8 +37,8 @@
   <li class="mdl-menu__item">Add another account...</li>
 </ul>
 <nav class="mdl-navigation">
-  <a class="mdl-navigation__link animsition-link" onclick="calendar()"><i class="material-icons">today</i><span>Calendar</span></a>
-  <a class="mdl-navigation__link animsition-link" onclick="gethome()"><i class="material-icons">account_circle</i><span>Profile</span></a>
+  <a class="mdl-navigation__link animsition-link" href="#" onclick="calendar()"><i class="material-icons">today</i><span>Calendar</span></a>
+  <a class="mdl-navigation__link animsition-link" href="#" onclick="gethome()"><i class="material-icons">account_circle</i><span>Profile</span></a>
   <a class="mdl-navigation__link animsition-link" href="#" onclick="exit()"><i class="material-icons">cancel
     </i><span>Log Out</span></a>
   </nav>
