--- a/platforms/browser/www/views/calendar-single-view.hbs
+++ b/platforms/browser/www/views/calendar-single-view.hbs
@@ -4,8 +4,7 @@
 <div class="calendar-day ">
   <!-- day date -->
   <div class="calendar-date">
-    <span>{{parsedPretyHour fecha_cita}}</span>
-    <span><i class="fa fa-calendar" aria-hidden="true"></i></span>
+    <span>{{{parsedPretyDateDayMonth fecha_cita}}}</span>
   </div>
   <!-- day colored activity -->
 
@@ -14,6 +13,7 @@
     <span>{{contacto_nombre}}</span><br/>
     <span>{{contacto_empresa}}</span>
     <span class="calendar-hour">{{parsedPretyDate fecha_cita}}</span>
+    <b>{{parsedPretyHour fecha_cita}}</b>
   </div></div>
   <script>
     
