--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -1,12 +1,13 @@
 <main class="mdl-layout__content mdl-color--white">
 <div class="profile-page">
   <img src="data:image/jpg;base64," alt="avatar usuario" id="avatarlargeuser">
-  
   <div class="contact-info">
-    <h3> {{user.first_name}} {{user.last_name}} </h3>
-   
+    <h3> {{user.first_name}} {{user.last_name}}  </h3>
   </div>
 </div>
+<center>
+<h3><a onclick="calendar()">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></h3>
+</center>
 <div class="contact-about">
   <div class="mdl-card mdl-shadow--2dp">
     <div class="mdl-grid">
