--- a/platforms/browser/www/views/calendar.hbs
+++ b/platforms/browser/www/views/calendar.hbs
@@ -1,9 +1,6 @@
 <!-- Page Content -->
-
-
 <main class="mdl-layout__content">
-<div id="calendarup" style="position:absolute; width: 100%; height: 50px; padding:20px; background: #000; color:#fff; font-size:35px; "><center>Calendario</center></div><br/><br/><br/><br/><br/>
-
+<div id="calendarup" style="position: fixed; width: 100%; height: 20px; padding: 20px 0; background: #003462; color:#fff; font-size:25px; z-index: 100;"><center> <i class="fa fa-calendar" aria-hidden="true"></i> Calendar</center></div><br/><br/><br/><br/>
 <script>
    var connection = window.localStorage.getItem("networkXX");
    if(connection == "true"){
