--- a/platforms/browser/www/views/edit_profile.hbs
+++ b/platforms/browser/www/views/edit_profile.hbs
@@ -15,8 +15,7 @@
     });
     </script>
     </div>
-	<span>Edit Profile</span> 	
-	<a id="camera" onclick="capturePhoto();" style="margin-left:40px; margin-top: 20px; color: #fff;">Photo <i class="fa fa-camera-retro" aria-hidden="true"></i></a>
+	<a id="camera" onclick="capturePhoto();" style="margin-left:40px; margin-top: 20px; color: #fff; font-size: 18px;"><i class="fa fa-camera" aria-hidden="true"></i></a>
 
 </div>
 </div>
