--- a/platforms/browser/www/views/menu-user.hbs
+++ b/platforms/browser/www/views/menu-user.hbs
@@ -5,12 +5,12 @@
       <!-- Spacer -->
       <div class="mdl-layout-spacer"></div>
       <!-- Right Menu -->
-      <button class="mdl-button mdl-js-button mdl-button--icon">
+      <!-- <button class="mdl-button mdl-js-button mdl-button--icon">
       <a href="edit-profile.html" style="color: #fff!important;"><i class="material-icons">edit</i></a>
-      </button>
-      <button class="mdl-button mdl-js-button mdl-button--icon">
+      </button> -->
+      <!-- <button class="mdl-button mdl-js-button mdl-button--icon">
       <a href="notifications.html" style="color: #fff!important;"> <i class="material-icons">notifications</i></a>
-      </button>
+      </button> -->
     </div>
   </header>
   <!-- Top-right Dropdown Menu -->
@@ -38,7 +38,7 @@
       
       <!-- Main Navigation -->
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link animsition-link" href="calendar.html"><i class="material-icons">today</i><span>Calendar</span></a>
+        <a class="mdl-navigation__link animsition-link" href="calendar.html"> <i class="fa fa-calendar" aria-hidden="true"></i> <span> Calendar</span></a>
         <a class="mdl-navigation__link animsition-link" href="profile.html"><i class="material-icons">account_circle</i><span>Profile</span></a>
         <a class="mdl-navigation__link animsition-link" href="login.html"><i class="material-icons">cancel
           </i><span>Log Out</span></a>
