--- a/platforms/browser/www/views/menu.hbs
+++ b/platforms/browser/www/views/menu.hbs
@@ -3,12 +3,12 @@
       <!-- Spacer -->
       <div class="mdl-layout-spacer"></div>
       <!-- Right Menu -->
-      <button class="mdl-button mdl-js-button mdl-button--icon">
+     <!--  <button class="mdl-button mdl-js-button mdl-button--icon">
       <a href="#" onclick="edit()" style="color: #fff!important;"><i class="material-icons">edit</i></a>
       </button>
       <button class="mdl-button mdl-js-button mdl-button--icon">
       <a href="notifications.html" style="color: #fff!important;"> <i class="material-icons">notifications</i></a>
-      </button>
+      </button> -->
     </div>
   </header>
 <div class="mdl-card mdl-shadow--2dp mdl-color--primary mdl-color-text--blue-grey-50 drawer-profile">
@@ -26,9 +26,7 @@
     </button>
   </div>
   <!-- Top-right User -->
-  <div class="mdl-card__menu">
-    <img class="sub-user" src="img/sub-user.jpg" alt="" />
-  </div>
+  
 </div>
 <!-- Dropdown Menu -->
 <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="user-menu">
