--- a/platforms/browser/www/views/meeting.hbs
+++ b/platforms/browser/www/views/meeting.hbs
@@ -1,39 +1,29 @@
-<div class="calendar-activity teal" style="width: 100%; margin-bottom: 0px;">
-  <!--  <a id="sa-success" class="mdl-button mdl-js-button"><i class="material-icons">close</i></a> -->
-  <center> 
-  <span><h3>Meeting</h3></span>
-  <span class="calendar-hour"><h6>{{parsedPretyDate fecha_cita}}</h6></span>
-  </center>
-</div>
-<div class="clr"></div>
-<main class="mdl-layout__content">
+<!-- Page Content -->
+<main class="mdl-layout__content" style="background-color: #fff;">
+<div id="calendarup" style="position: fixed; width: 100%; height: 20px; padding: 20px 0; background: #003462; color:#fff; font-size:25px; z-index: 100;"><center> <i class="fa fa-calendar-check-o" aria-hidden="true"></i> Meeting</center><a href="#" onclick="calendar()" style="color: white!important; float: right; margin-top: -30px; margin-right:10px; z-index: 120;"> <i class="material-icons">arrow_back</i></a></div><br/><br/><br/>
+          
+             
+
+
 <div class="mdl-card mdl-shadow--2dp  drawer-profile">
-  <div class="mdl-card__title user" style="background-color: #4DB6AC; height: 105px; padding-top: 0px; overflow:auto;">
+  <div class="mdl-card__title user" style="background-color: #0097A7; height: 180px; padding-top: 0px; overflow:auto;">
     <p style="width: 95%; float: left; padding-left: 20px; font-size: 12px; line-height: 15px; text-align: justify;">
 
-    <h4>{{contacto_empresa}}:</h4>
+    <span class="calendar-hour" style="opacity: 0.7;"><h6 style="font-size: 12px;"><i class="fa fa-calendar-check-o" aria-hidden="true"></i> {{parsedPretyDate fecha_cita}}</h6></span>
+    <h4 style="font-size: 15px; font-weight: bold; margin: -20px 0 0 0;"><i class="fa fa-industry" aria-hidden="true"></i> {{contacto_empresa}}:</h4>
     {{#if instrucciones}}
     <h5>Instructions:</h5>{{instrucciones}}<br/>
     {{/if}}
     {{#if descripccion}}
-    <h5>Description:</h5>{{descripccion}}</p>
+    <p style="font-size: 12px; line-height: 15px;">{{descripccion}}</p>
     {{/if}}
   </div>
-  <div class="mdl-card__title user" style="background-color: #f0f0f0; height: 105px; padding-top: 15px; ">
-    <span class="user-name" style="float: left; color: rgba(0,0,0,.54); padding: 15px; font-size: 20px; ">{{contacto_nombre}}</span>
+  <div class="mdl-card__title user" style=" background-color: #f0f0f0!important; height: 90px; z-index: 10;">
+    <span class="user-name" style="text-align: center; color: #000!important; padding: 15px; font-size: 20px; opacity: 0.6;"><i class="fa fa-user" aria-hidden="true" style="color: #000!important;"></i> {{contacto_nombre}}</span>
   </div>
   <!-- Top-right User -->
 </div>
-<div>
-<center>
-<h4>Rate the cite</h4>
-<div style="width:100%;">
-<div id="rating_cite" class="c-rating" style="width:30%;">
-</div>
-</div>
-</center>
-</div>
-<div class="contact-about" style="margin-top: 10px; width: 110%; margin-left: -30px;">
+<div class="contact-about" style="margin-top:0; width: 110%; margin-left: -30px; z-index: 9; padding-top: 0!important;">
   <div class="mdl-card ">
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--4-col">
@@ -49,7 +39,7 @@
         </script>
       </div>
       <div class="mdl-cell mdl-cell--4-col">
-        <a class="no-accent-color" id="sms"><i class="fa fa-commenting-o" aria-hidden="true"></i>
+        <a class="no-accent-color" id="sms"><i class="material-icons">sms</i>
         </a>
         <span>SMS</span>
 
@@ -70,28 +60,37 @@
   </div>
 </div>
 
+<div style="margin-top: -60px; background-color: #fff; padding-bottom: 10px;">
 <h4>
 <center>
 <a class="no-accent-color" onclick="window.open('https://www.google.com/maps/search/{{staticLinkByGoogleData lugar_cita lugar_cita2}}', '_system')">
-Get to cite place <i class="fa fa-map-marker" aria-hidden="true"></i>
-<span>Map</span> <i class="fa fa-map" aria-hidden="true"></i>
-
+<img src="../img/map.jpg" style="width: 100%; height: auto; background-color: #000;">
 </a>
 </center>
 </h4>
-<hr>
+</div>
 
-<div class="chat">
+<div style="margin-top: -10px; border-bottom: 1px solid #f0f0f0;"">
+<center>
+<h4>How do you rate this meeting?</h4>
+<div style="width:100%; padding-bottom: 40px;">
+<div id="rating_cite" class="c-rating" style="width:30%;">
+</div>
+</div>
+</center>
+</div>
+
+<div class="chat mdl-shadow--2dp" style="background-color: #f0f0f0;">
 <ul id="addcomment">
  {{#each comments}}
    <li class="message-right" id="comment-{{id}}"> <!-- right message -->
-    <img src="" alt="" class="minilogo mdl-shadow--2dp"> <!-- user -->
+   <!--  <img src="" alt="" class="minilogo mdl-shadow--2dp"> 
     <script>
     $(document).ready(function(){
       var img_mini =  "data:image/jpg;base64," + window.localStorage.getItem("avatar_mini");
       $('.minilogo').attr('src', img_mini);
     });
-    </script>
+    </script> -->
     <div class="message mdl-shadow--2dp mdl-color--primary mdl-color-text--white"> 
       <p>{{coment_text}}</p> <!-- message text -->
       {{#if attachment}}
@@ -135,8 +134,8 @@ Get to cite place <i class="fa fa-map-marker" aria-hidden="true"></i>
     </script>
      
     </div>
-    <input class="mdl-textfield__input" type="text" id="coment_text" name="coment_text"/>
-    <label class="mdl-textfield__label" for="coment_text">Type comment...</label>
+    <input class="mdl-textfield__input" type="text" id="coment_text" name="coment_text" placeholder="Type comment..."/>
+    <label class="mdl-textfield__label" for="coment_text" ></label>
   </div>
 
   <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored send">
@@ -146,7 +145,6 @@ Get to cite place <i class="fa fa-map-marker" aria-hidden="true"></i>
 
 </div>
 </main>
-</div>
 
 
 <script>
