--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -1,4 +1,5 @@
 <main class="mdl-layout__content mdl-color--white">
+<div id="calendarup" style="position: fixed; width: 100%; height: 20px; padding: 20px 0; background: #003462; color:#fff; font-size:25px; z-index: 100;"><a href="#" onclick="edit()" style="color: white!important; float: right; margin-top: 0px; margin-right:10px; z-index: 120;"> <i class="material-icons">edit</i></a></div>
 <div class="profile-page">
   <img src="data:image/jpg;base64," alt="avatar usuario" id="avatarlargeuser">
   <div class="contact-info">
@@ -6,7 +7,7 @@
   </div>
 </div>
 <center>
-<h3><a onclick="calendar()" class="no-accent-color">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></h3>
+<h3><a onclick="calendar()" class="no-accent-color"> <i class="fa fa-calendar" aria-hidden="true"></i> Calendar</a></h3>
 </center>
 <div class="contact-about">
   <div class="mdl-card mdl-shadow--2dp">
