changes in notices

--- a/platforms/browser/www/views/meeting.hbs
+++ b/platforms/browser/www/views/meeting.hbs
@@ -64,7 +64,7 @@
 <h4>
 <center>
 <a class="no-accent-color" onclick="window.open('https://www.google.com/maps/search/{{staticLinkByGoogleData lugar_cita lugar_cita2}}', '_system')">
-<img src="../img/map.jpg" style="width: 100%; height: auto; background-color: #000;">
+<img src="img/map.jpg" style="width: 100%; height: auto; background-color: #000;">
 </a>
 </center>
 </h4>
