--- a/www/views/meeting.hbs
+++ b/www/views/meeting.hbs
@@ -66,11 +66,12 @@
 <a class="no-accent-color" onclick="window.open('https://www.google.com/maps/search/{{staticLinkByGoogleData lugar_cita lugar_cita2}}', '_system')">
 <img src="img/map.jpg" style="width: 100%; height: auto; background-color: #000;">
 </a>
+<p style="margin-top: 20px; font-size: 13px;">{{{lugar_cita}}} {{{lugar_cita2}}}</p>
 </center>
 </h4>
 </div>
 
-<div style="margin-top: -10px; border-bottom: 1px solid #f0f0f0;"">
+<div style="margin-top: -10px; border-bottom: 1px solid #f0f0f0;">
 <center>
 <h4>How do you rate this meeting?</h4>
 <div style="width:100%; padding-bottom: 40px;">
