changes for camera

--- a/platforms/browser/www/views/login.hbs
+++ b/platforms/browser/www/views/login.hbs
@@ -32,9 +32,9 @@ Login
 
 <script>
   $('#login').submit(function(){
-  	//var url = 'http://btmconsulting-api.herokuapp.com/verificador_de_password'
+  	var url = 'http://btmconsulting-api.herokuapp.com/verificador_de_password'
     //var url = 'http://172.20.10.8:3000/verificador_de_password'
-    var url = 'http://192.168.1.75:3000/verificador_de_password'
+   // var url = 'http://192.168.1.75:3000/verificador_de_password'
 
   	var user = {
             email: $("#id-email").val(),
